cmake_minimum_required(VERSION 2.8.11 FATAL_ERROR)

project(zxtune123)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

find_package(Boost REQUIRED COMPONENTS thread program_options system filesystem)
include_directories(${BOOST_INCLUDEDIR})
add_definitions(-DHAVE_BOOST)
add_definitions(-DNO_DEBUG_LOGS)

include_directories("../..")
include_directories("../../include")
include_directories("../../src")

if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4018 /wd4244 /wd4800 /wd4996")
set(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} /wd4018 /wd4090")
else()
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-local-typedef")
endif()

find_package(ZLIB REQUIRED)
include_directories(${ZLIB_INCLUDE_DIRS})


#3rdparty
add_subdirectory("../../3rdparty/gme" "gme")
add_subdirectory("../../3rdparty/hvl" "hvl")
add_subdirectory("../../3rdparty/lhasa" "lhasa")
add_subdirectory("../../3rdparty/lzma" "lzma")
add_subdirectory("../../3rdparty/sidplayfp" "sidplayfp")
add_subdirectory("../../3rdparty/snesspc" "snesspc")
add_subdirectory("../../3rdparty/unrar" "unrar")
add_subdirectory("../../3rdparty/xmp" "xmp")
add_subdirectory("../../3rdparty/z80ex" "z80ex")

#core
add_subdirectory("../../src/analysis" "analysis")
add_subdirectory("../../src/async" "async")
add_subdirectory("../../src/binary" "binary")
add_subdirectory("../../src/binary/format" "binary_format")
add_subdirectory("../../src/core" "core")
add_subdirectory("../../src/core/conversion" "core_conversion")
add_subdirectory("../../src/core/plugins/archives" "core_plugins_archives")
add_subdirectory("../../src/core/plugins/containers" "core_plugins_containers")
add_subdirectory("../../src/core/plugins/players" "core_plugins_players")
add_subdirectory("../../src/core/properties" "core_properties")
add_subdirectory("../../src/debug" "dbg")
add_subdirectory("../../src/devices/aym" "devices_aym")
add_subdirectory("../../src/devices/aym/dumper" "devices_aym_dumper")
add_subdirectory("../../src/devices/beeper" "devices_beeper")
add_subdirectory("../../src/devices/dac" "devices_dac")
add_subdirectory("../../src/devices/fm" "devices_fm")
add_subdirectory("../../src/devices/saa" "devices_saa")
add_subdirectory("../../src/devices/z80" "devices_z80")
add_subdirectory("../../src/formats/archived" "formats_archived")
add_subdirectory("../../src/formats/archived/multitrack" "formats_archived_multitrack")
add_subdirectory("../../src/formats/chiptune" "formats_chiptune")
add_subdirectory("../../src/formats/packed" "formats_packed")
add_subdirectory("../../src/formats/multitrack" "formats_multitrack")
add_subdirectory("../../src/io" "io")
add_subdirectory("../../src/l10n/stub" "l10n_stub")
add_subdirectory("../../src/parameters" "parameters")
add_subdirectory("../../src/platform" "platform")
add_subdirectory("../../src/platform/application" "platform_application")
add_subdirectory("../../src/platform/version" "platform_version")
add_subdirectory("../../src/sound" "sound")
add_subdirectory("../../src/sound/backends" "sound_backends")
add_subdirectory("../../src/strings" "strings")
add_subdirectory("../../src/tools" "tools")

set(SRCS_CXX "information.cpp" "sound.cpp" "source.cpp" "display.cpp" "cli_app.cpp" "config.cpp" "text/text.cpp")
if(WIN32)
list(APPEND SRCS_CXX "console_windows.cpp")
else(WIN32)
list(APPEND SRCS_CXX "console_linux.cpp")
endif(WIN32)

set(LIBS gme hvl lhasa lzma sidplayfp snesspc unrar xmp z80ex analysis async binary binary_format core core_conversion core_plugins_archives core_plugins_containers core_plugins_players core_properties dbg devices_aym devices_aym_dumper devices_beeper devices_dac devices_fm devices_saa devices_z80 formats_archived formats_archived_multitrack formats_chiptune formats_packed formats_multitrack io l10n_stub parameters platform platform_application platform_version sound sound_backends strings tools)

add_executable(zxtune123 ${SRCS_CXX})
add_dependencies(zxtune123 ${LIBS})
target_link_libraries(zxtune123 ${LIBS} ${ZLIB_LIBRARIES} ${Boost_LIBRARIES})
set_property(TARGET zxtune123 PROPERTY FOLDER "apps")
